--- a/themes/css/style.css
+++ b/themes/css/style.css
@@ -17,11 +17,11 @@
             font-weight: bold;
             font-style: normal;
         }
-body{ padding:0; color: #454545; font-family: 'Open Sans', sans-serif;}
+body{ padding:0; color: rgb(51,168,255); font-family: 'Open Sans', sans-serif;}
 a,a:hover{text-decoration:none; color:#FE5214}
 h2,h3{color:#FE5214; text-rendering: optimizelegibility; }
 h1{padding: 0 0 44px; font-weight: 200;font-size: 54px;line-height: 56px;color: #464646;margin: 0;font-family: 'HelveticaRegular';text-rendering: optimizelegibility;}
-h1.brand {padding: 0;height: 75px;padding-top: 75px;margin: -104px auto 0;width: 150px;background: rgb(255, 61, 0);border-radius: 50%;box-shadow: 0px 0px 4px #000;color: #fff;font-size: 41px;text-shadow: 1px 1px 0 #000;line-height: 81px;}
+h1.brand {padding: 0;height: 75px;padding-top: 75px;margin: -104px auto 0;width: 180px;background: rgb(51, 168, 255);border-radius: 10%;box-shadow: 0px 0px 4px #000;color: #fff;font-size: 41px;text-shadow: 1px 1px 0 #000;line-height: 81px;}
 .clr{clear:both}
 .cntr{text-align:center}
 .navbar{margin-bottom:-1px; margin-top:8px; position:relative }
